add overflow scroll to tranlsit map wrapper

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -130,6 +130,7 @@ textarea.textIn , textarea.textOut{
   margin: 10px auto;
   width: 90%;
   font-family: 'Vesper Libre', serif;
+  overflow: scroll;
 }
 
 .translitMap table,
